fixing overflow

--- a/index.css
+++ b/index.css
@@ -88,7 +88,7 @@ p {
     align-items: center;
     flex-direction: row;
     max-height: 250px;
-    width: 410px;
+    width: 390px;
     margin-left: 30px;
 }
 
